# hyperkb

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml
.claude/skills/rem/: SKILL.md
hyperkb/: __init__.py  cli.py  config.py  conflict.py  crypto.py  db.py  format.py  mcp_server.py  models.py  remote.py  search.py  store.py  sync.py
integrations/opencode/: README.md  opencode.example.json
integrations/opencode/instructions/: hyperkb.md
integrations/opencode/skills/hyperkb/: SKILL.md
integrations/opencode/skills/rem/: SKILL.md
scripts/: release.sh
tests/: conftest.py  test_cli.py  test_config.py  test_conflict.py  test_context_retrieval.py  test_crypto.py  test_db.py  test_format.py  test_mcp_server.py  test_mcp_sync.py  test_provenance.py  test_remote.py  test_search.py  test_store.py  test_sync.py
